Changed text for no convo opened and added navbar to messaging

--- a/src/components/messenger/messenger.css
+++ b/src/components/messenger/messenger.css
@@ -1,3 +1,17 @@
 .messageImg{
     max-height: 100px;
 }
+
+
+
+  .noConvoOpened {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 4vh;
+  min-height: 100vh;
+    color: rgb(224, 220, 220);
+    cursor: default;
+  }
+  
