--- a/src/components/messenger/message.css
+++ b/src/components/messenger/message.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
   }
   
   .messageTop{
