--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,23 +1,18 @@
 
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+
+.waves{
+    width: 100%;
+    height: 100%;
 }
 
-body{
-    display: flex;
-    min-height: 100vh;
-    background: #333;
-} */
-
-footer .wave{
+.wave{
     position: absolute;
-    top: -100px;
+    top: 90%;
     left: 0;
     width: 100%;
     height: 100px;
-    background: #f00 url('./wave.png');
+    background-image: url('wave.png');
     background-size: 1000px 100px;
 }
 
@@ -33,6 +28,20 @@ footer .wave#wave2{
     opacity: 0.5;
     bottom: 10px;
     animation: animateWave_02 4s linear infinite;
+}
+
+footer .wave#wave3{
+    z-index: 1000;
+    opacity: 0.2;
+    bottom: 15px;
+    animation: animateWave 3s linear infinite;
+}
+
+footer .wave#wave4{
+    z-index: 999;
+    opacity: 0.7;
+    bottom: 20px;
+    animation: animateWave_02 3s linear infinite;
 }
 
 @keyframes animateWave{
