--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
   height: 100vh;
   font-family: 'Nunito Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
